data/derived/comb/progs/unify/prog4947.ml.out
Characters 139-140:
  List.fold_left f base l;;
                        ^
Error: This expression has type 'a list list
       but an expression was expected of type ('a list -> 'a) list
       Type 'a list is not compatible with type 'a list -> 'a 
